--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,9 @@
   --secondary: #1e3d6e;
   --primaryOverlay: #4d96bbe8;
   --secondaryOverlay: #1e3d6ee8;
+  --offWhite: #f5f5f5;
+  --dark: #1e1e1e;
+  --darkBackground: #313131;
 }
 
 @font-face {
@@ -162,7 +165,29 @@ header nav {
 
 /* SECTION PLANS */
 #section-plans {
-  margin-top: 2rem;
+  padding: 7rem 0 5rem 0;
+}
+
+#section-plans h2 {
+  font-family: "sfLight";
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.background-arrow {
+  position: absolute;
+  top: 50%;
+  width: 5%;
+}
+
+.background-arrow:nth-child(2) {
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.background-arrow:nth-child(1) {
+  left: 0;
+  transform: rotate(180deg) translateY(50%);
 }
 .plans-container {
   width: 65%;
@@ -179,6 +204,7 @@ header nav {
 
 .plan:hover {
   transform: scale(1.1);
+  /* transform-origin: top; */
 }
 
 .plan-image-container {
@@ -253,4 +279,152 @@ header nav {
   line-height: 25px;
   padding: 0 0 0.8rem 0.8rem;
   margin: 0;
+}
+/* SECTION SERVICES AND TESTIMONIALS */
+#section-services {
+  padding-bottom: 4rem;
+}
+#section-services h2 {
+  margin-bottom: 2rem;
+}
+.videos-container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.iframe-container {
+  position: relative;
+  width: 100%;
+  /* padding-bottom: 56.25%; */
+  padding-bottom: 17.45%;
+  margin: 0 1rem;
+}
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0 1rem;
+}
+
+.iframe-container iframe:hover {
+  cursor: pointer;
+}
+/* SECTION REGISTER */
+#section-register {
+  background: url("/assets/img/fondo-registrate.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 2rem;
+}
+
+#section-register h2 {
+  color: var(--offWhite);
+  font-family: "sfHeavy";
+  text-transform: uppercase;
+}
+
+.form-register {
+  width: 25%;
+}
+
+.form-register input {
+  border-radius: 0.3rem;
+  padding: 0.5rem 1rem;
+  width: 100%;
+  border: 2px solid transparent;
+  font-family: "sfLight";
+}
+
+.form-register input:focus {
+  outline: none;
+  border: 2px solid var(--secondary);
+  box-shadow: none;
+}
+
+.form-register label {
+  text-align: left;
+  margin-bottom: 0;
+  color: var(--offWhite);
+}
+
+.form-register span {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.form-register .form-control {
+  border: none;
+  height: auto;
+}
+
+.form-register .form-control {
+  border: 2px solid #fff;
+}
+
+.btn-register {
+  background: #808080;
+  color: var(--offWhite);
+  font-family: "sfBold";
+  font-weight: bold;
+  font-size: 1.2em;
+  transition: all 0.2s ease-in;
+}
+
+.btn-register:hover {
+  background-color: #696969;
+}
+
+/* SECTION CONTACT AND FOOTER */
+footer {
+  background: var(--darkBackground);
+  color: var(--offWhite);
+}
+
+.footer-container {
+  width: 65%;
+  margin: 0 auto;
+  padding: 4rem 0;
+}
+
+.info-container,
+footer .frame-container {
+  flex: 1;
+}
+
+.map-icon {
+  width: 30%;
+}
+
+footer h4 {
+  font-family: "sfHeavy";
+}
+
+.frame-container {
+  height: 20rem;
+  width: 100%;
+}
+
+footer iframe {
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--offWhite);
+  padding: 0.5rem;
+}
+
+.footer-social img {
+  width: 7%;
+  margin-right: 0.3rem;
+}
+
+.footer-social {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.footer-social a:link,
+.footer-social a:visited {
+  color: var(--offWhite);
+  text-decoration: none;
 }
