--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,14 @@
 :root {
   --primary: #4d97bb;
   --secondary: #1e3d6e;
+  --secondaryHover: #436ba7;
   --primaryOverlay: #4d96bbe8;
   --secondaryOverlay: #1e3d6ee8;
   --offWhite: #f5f5f5;
   --dark: #1e1e1e;
   --darkBackground: #313131;
+  --modalBackground: #0066a1;
+  --grayText: #3f3f3f;
 }
 
 @font-face {
@@ -57,7 +60,7 @@ img {
 }
 
 header nav {
-  box-shadow: 0px 3px 15px #e3e3e3;
+  box-shadow: 0px 1px 15px #c6c6c6;
   position: relative;
   z-index: 1;
 }
@@ -79,7 +82,7 @@ header nav {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 10rem 0;
+  padding: 15rem 0 10rem 0;
 }
 
 .mission-container {
@@ -144,7 +147,6 @@ header nav {
   color: #fff;
   text-transform: uppercase;
   font-family: "sfLight";
-  font-size: 2.5rem;
 }
 
 .objective {
@@ -190,7 +192,7 @@ header nav {
   transform: rotate(180deg) translateY(50%);
 }
 .plans-container {
-  width: 65%;
+  width: 75%;
   margin: 0 auto;
   margin-top: 2rem;
 }
@@ -209,7 +211,7 @@ header nav {
 
 .plan-image-container {
   min-height: 15rem;
-
+  width: 100%;
   clip-path: polygon(
     0% 15%,
     0 0,
@@ -232,6 +234,35 @@ header nav {
   object-fit: cover;
 }
 
+.plan-image-container {
+  height: 15rem;
+}
+
+.plan-1 .plan-image-container {
+  background: url("/assets/img/plan-1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.plan-2 .plan-image-container {
+  background: url("/assets/img/plan-2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.plan-3 .plan-image-container {
+  background: url("/assets/img/plan-3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.plan-4 .plan-image-container {
+  background: url("/assets/img/plan-4.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .plan h3 {
   position: absolute;
   bottom: 6%;
@@ -280,6 +311,120 @@ header nav {
   padding: 0 0 0.8rem 0.8rem;
   margin: 0;
 }
+
+.modal-content {
+  border-radius: 2rem;
+  background: var(--offWhite);
+}
+
+.modal-header {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+
+.modal-footer {
+  border-top: none;
+}
+
+.modal-content h5 {
+  background: rgb(55, 175, 203);
+  background: linear-gradient(
+    180deg,
+    rgba(55, 175, 203, 1) 0%,
+    rgba(0, 123, 167, 1) 96%
+  );
+  color: var(--offWhite);
+  width: fit-content;
+  padding: 0 2rem;
+  margin: 0 auto;
+  border-radius: 10rem;
+  font-family: "sfHeavy";
+  font-size: 1.6em;
+}
+
+.modal-price {
+  background-color: var(--offWhite);
+  color: var(--secondary);
+  font-family: "sfBlack";
+  font-size: 3em;
+  border-bottom: 2px solid var(--secondary);
+  border-left: 2px solid var(--secondary);
+  border-right: 2px solid var(--secondary);
+  line-height: 50px;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  width: fit-content;
+  padding: 0 1rem;
+}
+
+.modal-list {
+  padding: 0 1.5rem;
+}
+
+.modal-list-item {
+  margin-bottom: 1rem;
+}
+
+.modal-list-item img {
+  width: 7%;
+  margin-right: 1rem;
+}
+
+.modal-list-item p {
+  margin-bottom: 0;
+  color: var(--grayText);
+
+  font-family: "sfLight";
+  font-size: 1.05em;
+}
+
+.separator {
+  flex: 1;
+  /* background-color: red; */
+  border-bottom: 3px dotted var(--grayText);
+  position: relative;
+  top: 50%;
+  transform: translateY(-25%);
+}
+
+/* .list-dotted li p:not(:last-child) {
+  flex-grow: 1;
+  flex-shrink: 1;
+  position: relative;
+}
+
+.list-dotted li p:not(:last-child)::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  border-bottom: 3px dotted var(--grayText);
+} */
+
+.modal-link-container {
+  /* padding: 0; */
+  width: 50%;
+}
+
+.modal-link {
+  background: var(--secondary);
+  outline: none;
+  border: none;
+}
+
+.modal-link:hover {
+  background: var(--secondaryHover);
+}
+.modal-link img {
+  width: 8%;
+  margin-left: 0.7rem;
+}
+
+.modal-rules {
+  color: var(--secondary);
+  font-family: "sfBold";
+}
 /* SECTION SERVICES AND TESTIMONIALS */
 #section-services {
   padding-bottom: 4rem;
@@ -305,7 +450,6 @@ header nav {
   left: 0;
   width: 100%;
   height: 100%;
-  margin: 0 1rem;
 }
 
 .iframe-container iframe:hover {
@@ -427,4 +571,343 @@ footer iframe {
 .footer-social a:visited {
   color: var(--offWhite);
   text-decoration: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .mission-container {
+    max-width: 50%;
+    padding-right: 12rem;
+  }
+
+  .mission-container p {
+    text-align: justify;
+  }
+
+  .socials {
+    width: 10%;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+
+  .social {
+    flex: 1;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .social img {
+    width: 50%;
+  }
+
+  .form-register {
+    width: 30%;
+  }
+
+  .map-icon {
+    width: 10%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .socials {
+    width: 5%;
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  h2 {
+    font-size: 3em;
+  }
+  .socials {
+    width: 4%;
+  }
+  .nav-item {
+    font-size: 2em;
+  }
+  .mission-container {
+    padding: 10rem 0;
+    padding-right: 21rem;
+  }
+
+  .mission-container h1 {
+    font-size: 3.5em;
+  }
+
+  .mission-container p {
+    font-size: 2.3em;
+  }
+  .my-container {
+    max-width: 50%;
+    margin: 0 auto;
+  }
+
+  .my-container-xl {
+    max-width: 65%;
+    margin: 0 auto;
+  }
+
+  .objective p {
+    font-size: 1.8em;
+  }
+
+  .text-secondary {
+    font-size: 2.2em;
+    margin-bottom: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 3000px) {
+  .socials {
+    width: 3%;
+  }
+  .objective img {
+    width: 30%;
+  }
+  .my-container {
+    max-width: 45%;
+  }
+  .plan {
+    margin: 0 1.5rem;
+  }
+  .videos-container {
+    width: 55%;
+  }
+
+  .form-register {
+    width: 20%;
+  }
+
+  .map-icon {
+    width: 7%;
+  }
+
+  footer h4 {
+    font-size: 2.5em;
+  }
+
+  footer p,
+  footer a:link,
+  footer a:visited {
+    font-size: 1.8em;
+  }
+
+  footer a:link,
+  footer a:visited {
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  /* NAVBAR */
+  .navbar-brand {
+    width: 50%;
+  }
+  /* SECTION MISSION */
+  #section-mission {
+    background-position: left;
+    padding: 5rem 0;
+  }
+  .mision-flecha {
+    display: none;
+  }
+
+  .mission-container {
+    max-width: 85%;
+    margin: 4rem auto 0 auto;
+    padding: 1rem 1.5rem 0 1.5rem;
+
+    text-align: center;
+    background: #ffffffa8;
+    border-radius: 1rem;
+  }
+  .mission-container p {
+    font-size: 1.5em;
+  }
+
+  .socials {
+    position: inherit;
+    width: 40%;
+    margin: 0 auto;
+    transform: none;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    margin-top: 3rem;
+    padding: 0.5rem 0;
+    flex-direction: row;
+  }
+
+  .social {
+    flex: 1;
+    width: 100%;
+    text-align: center;
+  }
+  .social img {
+    width: 50%;
+  }
+
+  .objective {
+    margin-bottom: 2.8rem;
+  }
+
+  .objective p {
+    font-size: 1.7em;
+  }
+
+  .objective img {
+    margin-bottom: 2rem;
+    width: 25%;
+  }
+
+  .text-secondary {
+    font-size: 1.6em;
+  }
+
+  .plans-container {
+    width: 50%;
+  }
+
+  .plan {
+    margin-bottom: 3rem;
+  }
+
+  .plan-image-container {
+    height: 18rem;
+  }
+
+  .iframe-container,
+  .iframe-container iframe {
+    margin: 0 0 2rem 0;
+  }
+
+  .iframe-container {
+    height: 20rem;
+  }
+
+  .form-register {
+    width: 50%;
+  }
+
+  .map-icon {
+    display: none;
+  }
+
+  .footer-container {
+    text-align: center;
+  }
+
+  .contact-container {
+    margin-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  /* SECTION OBJECTIVES */
+  #section-objectives h2 {
+    margin-bottom: 4rem;
+  }
+
+  .objective p {
+    font-size: 1.5em;
+  }
+
+  .objective img {
+    margin-bottom: 2rem;
+    width: 30%;
+  }
+
+  /* SECTION PLANS */
+  #section-plans {
+    padding: 4rem 0;
+  }
+
+  .plans-container {
+    width: 50%;
+  }
+
+  .plan {
+    margin-bottom: 3rem;
+  }
+
+  .plan:hover {
+    transform: none;
+    background: var(--offWhite);
+  }
+
+  .plan-image-container {
+    min-height: 100%;
+  }
+
+  .plan-image-container img {
+    height: 100%;
+  }
+
+  /* SECTION SERVICES AND TESTIMONIALS */
+  #section-services h2 {
+    width: 90%;
+    margin: 0 auto 2rem auto;
+  }
+  .iframe-container {
+    width: 95%;
+    margin: 0 auto 2rem auto;
+    height: 18rem;
+  }
+  .iframe-container iframe {
+    margin: 0;
+  }
+
+  .form-register {
+    width: 80%;
+  }
+
+  .info-container {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mission-container p {
+    font-size: 1.3em;
+  }
+
+  .socials {
+    width: 50%;
+  }
+
+  .social img {
+    width: 60%;
+  }
+
+  /* SECTION OBJECTIVES */
+
+  /* SECTION PLANS */
+
+  .plans-container {
+    width: 80%;
+  }
+
+  /* SECTION SERVICES AND TESTIMONIALS */
+
+  .iframe-container {
+    height: 10rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  .mission-container p {
+    font-size: 1em;
+  }
+
+  .plan-price {
+    font-size: 2.8em;
+  }
+
+  .iframe-container {
+    height: 8.5rem;
+  }
+
+  #section-register h2 {
+    text-align: center;
+    font-size: 2em;
+  }
 }
