new header image

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,7 +55,7 @@ body {
 
 header {
   height: 100vh;
-  background: url("/assets/img/fondocomsalud.jpg");
+  background: url("/assets/img/fondocomsalud.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
